Update tab cell css to avoid overflow

--- a/src/components/templates/awgrid.less
+++ b/src/components/templates/awgrid.less
@@ -120,6 +120,8 @@
 					font-size: 1.0em;
 					box-sizing: border-box;
 					padding: 0.3rem 0.5rem;
+					overflow: hidden;
+					text-overflow: ellipsis;
 
 					&:last-of-type {
 						border-right: none;
